# data-preprocessing-microservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.docs/: architecture.md  description.md  flow.md  sandbox.md
app/api/: router.py
app/api/v1/endpoints/: process.py
app/core/: config.py
app/schemas/: process.py
app/services/: code_executor.py  code_validator.py  minio_client.py
examples/: generate_sample_data.py  test_api.py
examples/examples/data/: sample.parquet
